Revise README for improved setup and build instructions
- Updated the "Useful Commands" section to "Quick Start" for clarity.
- Added prerequisites for Java, Maven, JavaFX, and Inno Setup.
- Enhanced environment setup instructions for Java and JavaFX.
- Streamlined build commands for compiling, testing, and creating executables.
- Included troubleshooting tips for common issues related to hotkey functionality.